# code-dojo

./: .dockerignore  .gitignore  Agents.md  Dockerfile  README.md  docker-compose.yml  render.yaml
.agent/rules/: agents-md.md
.github/workflows/: ci.yml
backend/: .pre-commit-config.yaml  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  session.py
backend/app/routes/: assistant.py  execution.py  sessions.py  websocket.py
backend/app/services/: ai_assistant.py  piston.py  session_service.py
backend/scripts/: generate_openapi.py
backend/tests/: __init__.py  conftest.py  test_ai_assistant.py  test_assistant.py  test_execution.py  test_piston.py  test_security_exploit.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_config.py  test_main.py  test_session_model.py  test_session_routes.py  test_session_service.py  test_websocket.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  setupTests.js
frontend/src/__mocks__/: axios.js
frontend/src/__tests__/: App.test.js
frontend/src/components/: CodeExecutor.css  CodeExecutor.js
frontend/src/components/__tests__/: CodeExecutor.test.js
frontend/src/hooks/: useWebSocket.js
frontend/src/hooks/__tests__/: useWebSocket.test.js
frontend/src/pages/: HomePage.css  HomePage.js  SessionPage.css  SessionPage.js
frontend/src/pages/__tests__/: HomePage.test.js  (+1 more)
frontend/src/services/: api.js
frontend/src/utils/: participantUtils.js
(+1 files in other folders)
